--- a/src/components/Home components/Homecomponents.css
+++ b/src/components/Home components/Homecomponents.css
@@ -23,3 +23,15 @@
         min-height: 450px;
     }
 }
+
+/* second bannert bg */
+.scbannerbd{
+    background-image: url(../../assets/scbannerbg.png);
+    background-position: center center; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 768px;
+}
