--- a/src/components/Home components/Homecomponents.css
+++ b/src/components/Home components/Homecomponents.css
@@ -25,13 +25,35 @@
 }
 
 /* second bannert bg */
-.scbannerbd{
-    background-image: url(../../assets/scbannerbg.png);
-    background-position: center center; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
+.scbgdraw {
+    background-image: url('../../assets/Banner\ Image/scbgdraw3.png');
+  
+    background-size: 7rem;
+    opacity: 1;
+    z-index: 1;
+    width: 10rem;
+    height: 5rem;
     background-repeat: no-repeat;
-    background-position: center;
-    width: 100%;
-    height: 768px;
+}
+
+.scbgdraw2{
+    background-image: url('../../assets/Banner\ Image/scbgdraw.png');
+  
+    background-size: 7rem;
+    opacity: 1;
+    z-index: 1;
+    width: 10rem;
+    height: 5rem;
+    background-repeat: no-repeat;
+}
+
+.scbgdraw3{
+    background-image: url('../../assets/Banner\ Image/scbgdraw2.png');
+    float: left;
+    background-size: 10rem;
+    opacity: 1;
+    z-index: 1;
+    width: 10rem;
+    height: 8rem;
+    background-repeat: no-repeat;
 }
