--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+* {
+  scroll-behavior: smooth;
+  /* box-sizing: border-box; */
+}
 
 .App {}
 
