updated styles in available features

--- a/src/components/Home components/AvailableFeatures/AvailableFeatures.css
+++ b/src/components/Home components/AvailableFeatures/AvailableFeatures.css
@@ -3,9 +3,12 @@
 }
 
 .hhh{
-   box-shadow: 1px 1px 8px gray;
+   box-shadow: 1px 1px 4px gray;
 }
 .hhh:hover{
-background-color: #3e5463;
+background-color: #1b82e2;
+transition: .4s ease-out;
+padding-left: -20px;
+padding-right: 20px;
 color: white;
 }
