--- a/src/components/uniquenews/Unique.css
+++ b/src/components/uniquenews/Unique.css
@@ -3,7 +3,7 @@
     border-radius: 50%;
  }
  .font-card{
-    margin-left: -150px;
+    /* margin-left: -150px; */
     margin-top: 5px;
  }
  .bb{
