--- a/src/components/Home components/Homecomponents.css
+++ b/src/components/Home components/Homecomponents.css
@@ -594,3 +594,11 @@ padding:10px;
 .tabs-box input[type="checkbox"]:checked ~ i.fa-chevron-circle-down{
 transform:rotate(180deg);
 }
+
+.containersnotfound{
+  min-height: 100vh;
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
