--- a/src/components/Home components/Homecomponents.css
+++ b/src/components/Home components/Homecomponents.css
@@ -1,6 +1,6 @@
 /* home page banner css file */
 .bannerbg{
-    background-image: url('https://doccure-react.dreamguystech.com/template/d368ebab89d653715a96b31ead9de731.jpg');
+    background-image: url('https://i.ibb.co/rbd0LBD/banner-5.jpg');
     background-position: center center; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
